# b5m.liujianping

./: .Makefile.swp  CMakeLists.txt  README  doxygen.conf
Problem_A/: CMakeLists.txt  GramClassifier.cpp  GramClassifier.h  GramDefs.h  GramFactory.h  GramHash.cpp  GramHash.h  GramHeap.cpp  GramHeap.h  GramLanguager.cpp  GramLanguager.h  Makefile  Problem_A_1.cpp  Problem_A_2.cpp  strutil.h
Problem_A/profile/: danish.profile  dutch.profile  english.profile  finnish.profile  french.profile  german.profile  italian.profile  norwegian.profile  swedish.profile  turkish.profile
Problem_B/: CMakeLists.txt  DAGNBClassifier.cpp  DAGNBClassifier.h  Makefile  NBClassifier.cpp  Problem_DAGNB.cpp  Problem_NB.cpp  dag.txt  nb.txt
Problem_B/sample/: sample_binary.test
